--- a/delight_menu_page.html
+++ b/delight_menu_page.html
@@ -27,71 +27,98 @@
 			<h3>ENTRÉES</h3>
 			<div class="underline_div"></div>
 			<div class="menu_card">
-				<h4>Tartare de thon</h4>
 				<div>
-					<p>Assaisonné au yuzu</p>
-					<p>25€</p>				
+					<h4>Tartare de thon</h4>
+					<div>
+						<p>Assaisonné au yuzu</p>
+						<p>25€</p>
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>			
 			</div>
 			<div class="menu_card">
-				<h4>Bouchée de homard croustillant</h4>
 				<div>
-					<p>Et sa farandole de petits légumes</p>
-					<p>35€</p>				
+					<h4>Bouchée de homard croustillant</h4>
+					<div>
+						<p>Et sa farandole de petits légumes</p>
+						<p>35€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Velouté de cèpes </h4>
 				<div>
-					<p>Aux truffes</p>
-					<p>20€</p>				
+					<h4>Velouté de cèpes </h4>
+					<div>
+						<p>Aux truffes</p>
+						<p>20€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<h3>PLATS</h3>
 			<div class="underline_div"></div>
 			<div class="menu_card">
-				<h4>Poulet rôti aux herbes de Provence</h4>
 				<div>
-					<p>Et sa crème de truffe</p>
-					<p>40€</p>				
+					<h4>Poulet rôti aux herbes de Provence</h4>
+					<div>
+						<p>Et sa crème de truffe</p>
+						<p>40€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Langouste rôtie</h4>
 				<div>
-					<p>Et ses légumes de saison</p>
-					<p>35€</p>				
+					<h4>Langouste rôtie</h4>
+					<div>
+						<p>Et ses légumes de saison</p>
+						<p>35€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Côte de boeuf Angus </h4>
 				<div>
-					<p>Et sa purée de panais</p>
-					<p>44€</p>				
+					<h4>Côte de boeuf Angus </h4>
+					<div>
+						<p>Et sa purée de panais</p>
+						<p>44€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<h3>DESSERTS</h3>
 			<div class="underline_div"></div>
 			<div class="menu_card">
-				<h4>Farandole de desserts</h4>
 				<div>
-					<p>Du chef</p>
-					<p>18€</p>				
+					<h4>Farandole de desserts</h4>
+					<div>
+						<p>Du chef</p>
+						<p>18€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Crème brulée</h4>
 				<div>
-					<p>Revisitée</p>
-					<p>22€</p>				
+					<h4>Crème brulée</h4>
+					<div>
+						<p>Revisitée</p>
+						<p>22€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Tiramisu</h4>
 				<div>
-					<p>À la noisette</p>
-					<p>23€</p>				
+					<h4>Tiramisu</h4>
+					<div>
+						<p>À la noisette</p>
+						<p>23€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="div_btn_menu">
 				<button class="btn-title btn-menu">Commander</button>
