--- a/french_menu_page.html
+++ b/french_menu_page.html
@@ -27,71 +27,98 @@
 			<h3>ENTRÉES</h3>
 			<div class="underline_div"></div>
 			<div class="menu_card">
-				<h4>Tartare de poulpe acidulé</h4>
 				<div>
-					<p>Aux zests d'orange</p>
-					<p>25€</p>				
+					<h4>Tartare de poulpe acidulé</h4>
+					<div>
+						<p>Aux zests d'orange</p>
+						<p>25€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Velouté de légumes d'antan</h4>
 				<div>
-					<p>Carotte, panais, topinambour</p>
-					<p>35€</p>				
+					<h4>Velouté de légumes d'antan</h4>
+					<div>
+						<p>Carotte, panais, topinambour</p>
+						<p>35€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Soupe à l'oignon</h4>
 				<div>
-					<p>Revisitée</p>
-					<p>20€</p>				
+					<h4>Soupe à l'oignon</h4>
+					<div>
+						<p>Revisitée</p>
+						<p>20€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<h3>PLATS</h3>
 			<div class="underline_div"></div>
 			<div class="menu_card">
-				<h4>Coquilles Saint-Jacques</h4>
 				<div>
-					<p>Accompagnées d'une purée de panais</p>
-					<p>40€</p>				
+					<h4>Coquilles Saint-Jacques</h4>
+					<div>
+						<p>Accompagnées d'une purée de panais</p>
+						<p>40€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Magret de canard</h4>
 				<div>
-					<p>Et parmentier de pommes de terres</p>
-					<p>35€</p>				
+					<h4>Magret de canard</h4>
+					<div>
+						<p>Et parmentier de pommes de terres</p>
+						<p>35€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Pigeonneau d'Ille-et-Vilaine</h4>
 				<div>
-					<p>Sur son lit de gnocchis aux légumes</p>
-					<p>44€</p>				
+					<h4>Pigeonneau d'Ille-et-Vilaine</h4>
+					<div>
+						<p>Sur son lit de gnocchis aux légumes</p>
+						<p>44€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<h3>DESSERTS</h3>
 			<div class="underline_div"></div>
 			<div class="menu_card">
-				<h4>Pétales de violettes glacés</h4>
 				<div>
-					<p>Et purée de noisettes</p>
-					<p>18€</p>				
+					<h4>Pétales de violettes glacés</h4>
+					<div>
+						<p>Et purée de noisettes</p>
+						<p>18€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Fondant au chocolat</h4>
 				<div>
-					<p>Revisité</p>
-					<p>22€</p>				
+					<h4>Fondant au chocolat</h4>
+					<div>
+						<p>Revisité</p>
+						<p>22€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="menu_card">
-				<h4>Millefeuille croustillant</h4>
 				<div>
-					<p>Myrtilles et pâte d'amande</p>
-					<p>23€</p>				
+					<h4>Millefeuille croustillant</h4>
+					<div>
+						<p>Myrtilles et pâte d'amande</p>
+						<p>23€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="div_btn_menu">
 				<button class="btn-title btn-menu">Commander</button>
