--- a/tast_menu_page.html
+++ b/tast_menu_page.html
@@ -26,72 +26,99 @@
 			</div>
 			<h3>ENTRÉES</h3>
 			<div class="underline_div"></div>
-			<div class="menu_card">
-				<h4>Fricassée d'escargot</h4>
+			<div class="menu_card slide-top1">
 				<div>
-					<p>Au pimet d'espelette</p>
-					<p>25€</p>				
+					<h4>Fricassée d'escargot</h4>
+					<div>
+						<p>Au pimet d'espelette</p>
+						<p>25€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
-			<div class="menu_card">
-				<h4>Foie gras de canard mi-cuit</h4>
+			<div class="menu_card slide-top2">
 				<div>
-					<p>Et ses copeaux de truffe noire</p>
-					<p>35€</p>				
+					<h4>Foie gras de canard mi-cuit</h4>
+					<div>
+						<p>Et ses copeaux de truffe noire</p>
+						<p>35€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
-			<div class="menu_card">
-				<h4>Oeuf au plat</h4>
+			<div class="menu_card slide-top3">
 				<div>
-					<p>Assaisonné à la truffe sur lit de caviar</p>
-					<p>20€</p>				
+					<h4>Oeuf au plat</h4>
+					<div>
+						<p>Assaisonné à la truffe sur lit de caviar</p>
+						<p>20€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<h3>PLATS</h3>
 			<div class="underline_div"></div>
-			<div class="menu_card">
-				<h4>Filet de boeuf aux herbes</h4>
+			<div class="menu_card slide-top4">
 				<div>
-					<p>Accompagné de sa ribambelle de légumes</p>
-					<p>40€</p>				
+					<h4>Filet de boeuf aux herbes</h4>
+					<div>
+						<p>Accompagné de sa ribambelle de légumes</p>
+						<p>40€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
-			<div class="menu_card">
-				<h4>Parmentier de queue de boeuf</h4>
+			<div class="menu_card slide-top5">
 				<div>
-					<p>À la truffe noire sur sa purée de panais</p>
-					<p>35€</p>				
+					<h4>Parmentier de queue de boeuf</h4>
+					<div>
+						<p>À la truffe noire sur sa purée de panais</p>
+						<p>35€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
-			<div class="menu_card">
-				<h4>Filet de turbot</h4>
+			<div class="menu_card slide-top6">
 				<div>
-					<p>Aux agrumes</p>
-					<p>44€</p>				
+					<h4>Filet de turbot</h4>
+					<div>
+						<p>Aux agrumes</p>
+						<p>44€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<h3>DESSERTS</h3>
 			<div class="underline_div"></div>
-			<div class="menu_card">
-				<h4>Paris-Brest</h4>
+			<div class="menu_card slide-top7">
 				<div>
-					<p>Revisité</p>
-					<p>18€</p>				
+					<h4>Paris-Brest</h4>
+					<div>
+						<p>Revisité</p>
+						<p>18€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
-			<div class="menu_card">
-				<h4>Macaron au chocolat d'exception</h4>
+			<div class="menu_card slide-top8">
 				<div>
-					<p>Et glace à la vanille de Madagascar</p>
-					<p>22€</p>				
+					<h4>Macaron au chocolat d'exception</h4>
+					<div>
+						<p>Et glace à la vanille de Madagascar</p>
+						<p>22€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
-			<div class="menu_card">
-				<h4>Mousse au chocolat </h4>
+			<div class="menu_card slide-top9">
 				<div>
-					<p>Au piment d'Espelette et à la truffe noire</p>
-					<p>23€</p>				
+					<h4>Mousse au chocolat </h4>
+					<div>
+						<p>Au piment d'Espelette et à la truffe noire</p>
+						<p>23€</p>				
+					</div>
 				</div>
+				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="div_btn_menu">
 				<button class="btn-title btn-menu">Commander</button>
