--- a/delight_menu_page.html
+++ b/delight_menu_page.html
@@ -22,103 +22,114 @@
 		<main class="main_menu">
 			<div class="menu_title">
 				<h2>Le délice des sens</h2>
-				<i class="far fa-heart"></i>
+				<div class="heart_div">
+					<i class="far fa-heart border"></i>
+					<i class="fas fa-heart purple"></i>
+				</div>
 			</div>
-			<h3>ENTRÉES</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card">
+			<div class="desktop_menu_div">
 				<div>
-					<h4>Tartare de thon</h4>
-					<div>
-						<p>Assaisonné au yuzu</p>
-						<p>25€</p>
+					<h3>ENTRÉES</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card">
+						<div>
+							<h4>Tartare de thon</h4>
+							<div>
+								<p>Assaisonné au yuzu</p>
+								<p>25€</p>
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>			
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Bouchée de homard croustillant</h4>
+							<div>
+								<p>Et sa farandole de petits légumes</p>
+								<p>35€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Velouté de cèpes </h4>
+							<div>
+								<p>Aux truffes</p>
+								<p>20€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>			
-			</div>
-			<div class="menu_card">
 				<div>
-					<h4>Bouchée de homard croustillant</h4>
-					<div>
-						<p>Et sa farandole de petits légumes</p>
-						<p>35€</p>				
+					<h3>PLATS</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card">
+						<div>
+							<h4>Poulet rôti aux herbes de Provence</h4>
+							<div>
+								<p>Et sa crème de truffe</p>
+								<p>40€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Langouste rôtie</h4>
+							<div>
+								<p>Et ses légumes de saison</p>
+								<p>35€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Côte de boeuf Angus </h4>
+							<div>
+								<p>Et sa purée de panais</p>
+								<p>44€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
 				<div>
-					<h4>Velouté de cèpes </h4>
-					<div>
-						<p>Aux truffes</p>
-						<p>20€</p>				
+					<h3>DESSERTS</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card">
+						<div>
+							<h4>Farandole de desserts</h4>
+							<div>
+								<p>Du chef</p>
+								<p>18€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Crème brulée</h4>
+							<div>
+								<p>Revisitée</p>
+								<p>22€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Tiramisu</h4>
+							<div>
+								<p>À la noisette</p>
+								<p>23€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<h3>PLATS</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card">
-				<div>
-					<h4>Poulet rôti aux herbes de Provence</h4>
-					<div>
-						<p>Et sa crème de truffe</p>
-						<p>40€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Langouste rôtie</h4>
-					<div>
-						<p>Et ses légumes de saison</p>
-						<p>35€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Côte de boeuf Angus </h4>
-					<div>
-						<p>Et sa purée de panais</p>
-						<p>44€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<h3>DESSERTS</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card">
-				<div>
-					<h4>Farandole de desserts</h4>
-					<div>
-						<p>Du chef</p>
-						<p>18€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Crème brulée</h4>
-					<div>
-						<p>Revisitée</p>
-						<p>22€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Tiramisu</h4>
-					<div>
-						<p>À la noisette</p>
-						<p>23€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="div_btn_menu">
 				<button class="btn-title btn-menu">Commander</button>
@@ -126,10 +137,12 @@
 		</main>
 		<footer class="footer_menu">
 			<img src="images/logo/ohmyfood@2x_white.svg" alt="logo OhMyFood"> </br>
-			<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-			<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-			<p>Mentions legales</p>
-			<p>Contact</p>
+			<div>
+				<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+				<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+				<p>Mentions legales</p>
+				<p>Contact</p>
+			</div>
 		</footer>
 	</body>
 </html>
