--- a/enchanter_menu_page.html
+++ b/enchanter_menu_page.html
@@ -22,113 +22,124 @@
 		<main class="main_menu">
 			<div class="menu_title">
 				<h2>La note enchantée</h2>
-				<i class="far fa-heart"></i>
+				<div class="heart_div">
+					<i class="far fa-heart border"></i>
+					<i class="fas fa-heart purple"></i>
+				</div>
 			</div>
-			<h3>ENTRÉES</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card">
+			<div class="desktop_menu_div">
 				<div>
-					<h4>Ravioles de foie gras </h4>
-					<div>
-						<p>Accompagnés de leur crème à la truffe</p>
-						<p>25€</p>				
+					<h3>ENTRÉES</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card">
+						<div>
+							<h4>Ravioles de foie gras </h4>
+							<div>
+								<p>Accompagnés de leur crème à la truffe</p>
+								<p>25€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Caviar osciètre</h4>
+							<div>
+								<p>Sur blini à la farine de blé noir</p>
+								<p>35€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Homard et espuma de potiron</h4>
+							<div>
+								<p>Mariné aux zestes d'orange</p>
+								<p>20€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Foie gras de canard cuit entier</h4>
+							<div>
+								<p>Confiture de figue et pain toasté</p>
+								<p>35€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
 				<div>
-					<h4>Caviar osciètre</h4>
-					<div>
-						<p>Sur blini à la farine de blé noir</p>
-						<p>35€</p>				
+					<h3>PLATS</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card">
+						<div>
+							<h4>Noix de coquilles Saint-Jacques</h4>
+							<div>
+								<p>Sur lit de purée de céleri-rave</p>
+								<p>40€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Langoustine poêlée</h4>
+							<div>
+								<p>Purée de patate douce</p>
+								<p>35€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Mijoté de queue de boeuf</h4>
+							<div>
+								<p>Et riz sauvage aux zestes de citron</p>
+								<p>44€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
 				<div>
-					<h4>Homard et espuma de potiron</h4>
-					<div>
-						<p>Mariné aux zestes d'orange</p>
-						<p>20€</p>				
+					<h3>DESSERTS</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card">
+						<div>
+							<h4>Macaron noisette et chocolat</h4>
+							<div>
+								<p>Glace au caramel brun et sel de Guérande</p>
+								<p>18€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Baba au rhum revisité</h4>
+							<div>
+								<p>Avec son coulis de citron</p>
+								<p>22€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card">
+						<div>
+							<h4>Tarte au citron meringuée</h4>
+							<div>
+								<p>Déstructurée</p>
+								<p>23€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Foie gras de canard cuit entier</h4>
-					<div>
-						<p>Confiture de figue et pain toasté</p>
-						<p>35€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<h3>PLATS</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card">
-				<div>
-					<h4>Noix de coquilles Saint-Jacques</h4>
-					<div>
-						<p>Sur lit de purée de céleri-rave</p>
-						<p>40€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Langoustine poêlée</h4>
-					<div>
-						<p>Purée de patate douce</p>
-						<p>35€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Mijoté de queue de boeuf</h4>
-					<div>
-						<p>Et riz sauvage aux zestes de citron</p>
-						<p>44€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<h3>DESSERTS</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card">
-				<div>
-					<h4>Macaron noisette et chocolat</h4>
-					<div>
-						<p>Glace au caramel brun et sel de Guérande</p>
-						<p>18€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Baba au rhum revisité</h4>
-					<div>
-						<p>Avec son coulis de citron</p>
-						<p>22€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card">
-				<div>
-					<h4>Tarte au citron meringuée</h4>
-					<div>
-						<p>Déstructurée</p>
-						<p>23€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="div_btn_menu">
 				<button class="btn-title btn-menu">Commander</button>
@@ -136,10 +147,12 @@
 		</main>
 		<footer class="footer_menu">
 			<img src="images/logo/ohmyfood@2x_white.svg" alt="logo OhMyFood"> </br>
-			<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-			<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-			<p>Mentions legales</p>
-			<p>Contact</p>
+			<div>
+				<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+				<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+				<p>Mentions legales</p>
+				<p>Contact</p>
+			</div>
 		</footer>
 	</body>
 </html>
