--- a/homepage.html
+++ b/homepage.html
@@ -27,72 +27,89 @@
 			</nav>
 			<div class="div_working">
 				<h2>Fonctionnement</h2>
-				<button class="btn-working"><p class="step_number">1</p><i class="fas fa-mobile-alt"></i>Choississez un restaurant</button>
-				<button class="btn-working"><p class="step_number">2</p><i class="fas fa-ellipsis-v"></i><i class="fas fa-bars"></i>Composez votre menu</button>
-				<button class="btn-working"><p class="step_number">3</p><i class="fas fa-store"></i>Dégustez au restaurant</button>
+				<div class="btn_working_div">
+					<button class="btn-working"><p class="step_number">1</p><i id="fa-mobile-alt" class="fas fa-mobile-alt"></i>Choississez un restaurant</button>
+					<button class="btn-working"><p class="step_number">2</p><i class="fas fa-ellipsis-v"></i><i class="fas fa-bars"></i>Composez votre menu</button>
+					<button class="btn-working"><p class="step_number">3</p><i class="fas fa-store"></i>Dégustez au restaurant</button>
+				</div>
 			</div>
 		</header>
 
 		<main>
 			<div class="homepage_restaurant_gallery">
 				<h2>Restaurants</h2>
-				<a href="tast_menu_page.html">
-					<div class="homepage_restaurant_card">
-						<img class="hompage_img_restaurant" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant Ménilmontan">
-						<div class="homepage_restaurant_subtitle">
-							<div>
-								<h4>La palette du goût</h4>
-								<p>Ménilmontan</p>
+				<div class="desktop_restaurant_div">
+					<a href="tast_menu_page.html">
+						<div class="homepage_restaurant_card">
+							<img class="hompage_img_restaurant" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant Ménilmontan">
+							<div class="homepage_restaurant_subtitle">
+								<div>
+									<h4>La palette du goût</h4>
+									<p>Ménilmontan</p>
+								</div>
+								<div class="heart_div">
+									<i class="far fa-heart border"></i>
+									<i class="fas fa-heart purple"></i>
+								</div>
 							</div>
-							<i class="far fa-heart"></i>
 						</div>
-					</div>
-				</a>
-				<a href="enchanter_menu_page.html">
-					<div class="homepage_restaurant_card">
-						<img class="hompage_img_restaurant" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant Charonne">
-						<div class="homepage_restaurant_subtitle">
-							<div>
-								<h4>La note enchantée</h4>
-								<p>Charonne</p>
+					</a>
+					<a href="enchanter_menu_page.html">
+						<div class="homepage_restaurant_card">
+							<img class="hompage_img_restaurant" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant Charonne">
+							<div class="homepage_restaurant_subtitle">
+								<div>
+									<h4>La note enchantée</h4>
+									<p>Charonne</p>
+								</div>
+								<div class="heart_div">
+									<i class="far fa-heart border"></i>
+									<i class="fas fa-heart purple"></i>
+								</div>
 							</div>
-							<i class="far fa-heart"></i>
 						</div>
-					</div>
-				</a>
-				<a href="french_menu_page.html">
-					<div class="homepage_restaurant_card">
-						<img class="hompage_img_restaurant" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant Cité Rouge">
-						<div class="homepage_restaurant_subtitle">
-							<div>
-								<h4>À la française</h4>
-								<p>Cité Rouge</p>
+					</a>
+					<a href="french_menu_page.html">
+						<div class="homepage_restaurant_card">
+							<img class="hompage_img_restaurant" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant Cité Rouge">
+							<div class="homepage_restaurant_subtitle">
+								<div>
+									<h4>À la française</h4>
+									<p>Cité Rouge</p>
+								</div>
+								<div class="heart_div">
+									<i class="far fa-heart border"></i>
+									<i class="fas fa-heart purple"></i>
+								</div>
 							</div>
-							<i class="far fa-heart"></i>
 						</div>
-					</div>
-				</a>
-				<a href="delight_menu_page.html">
-					<div class="homepage_restaurant_card">
-						<img class="hompage_img_restaurant" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant Folie-Méricourt">
-						<div class="homepage_restaurant_subtitle">
-							<div>
-								<h4>Le délice des sens</h4>
-								<p>Folie-Méricourt</p>
+					</a>
+					<a href="delight_menu_page.html">
+						<div class="homepage_restaurant_card">
+							<img class="hompage_img_restaurant" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant Folie-Méricourt">
+							<div class="homepage_restaurant_subtitle">
+								<div>
+									<h4>Le délice des sens</h4>
+									<p>Folie-Méricourt</p>
+								</div>
+								<div class="heart_div">
+									<i class="far fa-heart border"></i>
+									<i class="fas fa-heart purple"></i>
+								</div>
 							</div>
-							<i class="far fa-heart"></i>
 						</div>
-					</div>
-				</a>
+					</a>
+				</div>
 			</div>
 		</main>
-
 		<footer>
 			<img src="images/logo/ohmyfood@2x_white.svg" alt="logo OhMyFood"> </br>
-			<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-			<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-			<p>Mentions legales</p>
-			<p>Contact</p>
+			<div>
+				<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+				<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+				<p>Mentions legales</p>
+				<p>Contact</p>
+			</div>
 		</footer>
 	</body>
 </html>
