--- a/tast_menu_page.html
+++ b/tast_menu_page.html
@@ -22,103 +22,114 @@
 		<main class="main_menu">
 			<div class="menu_title">
 				<h2>La palette du goût</h2>
-				<i class="far fa-heart"></i>
+				<div class="heart_div">
+					<i class="far fa-heart border"></i>
+					<i class="fas fa-heart purple"></i>
+				</div>
 			</div>
-			<h3>ENTRÉES</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card slide-top1">
+			<div class="desktop_menu_div">
 				<div>
-					<h4>Fricassée d'escargot</h4>
-					<div>
-						<p>Au pimet d'espelette</p>
-						<p>25€</p>				
+					<h3>ENTRÉES</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card slide-top1">
+						<div>
+							<h4>Fricassée d'escargot</h4>
+							<div>
+								<p>Au pimet d'espelette</p>
+								<p>25€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card slide-top2">
+						<div>
+							<h4>Foie gras de canard mi-cuit</h4>
+							<div>
+								<p>Et ses copeaux de truffe noire</p>
+								<p>35€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card slide-top3">
+						<div>
+							<h4>Oeuf au plat</h4>
+							<div>
+								<p>Assaisonné à la truffe sur lit de caviar</p>
+								<p>20€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card slide-top2">
 				<div>
-					<h4>Foie gras de canard mi-cuit</h4>
-					<div>
-						<p>Et ses copeaux de truffe noire</p>
-						<p>35€</p>				
+					<h3>PLATS</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card slide-top4">
+						<div>
+							<h4>Filet de boeuf aux herbes</h4>
+							<div>
+								<p>Accompagné de sa ribambelle de légumes</p>
+								<p>40€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card slide-top5">
+						<div>
+							<h4>Parmentier de queue de boeuf</h4>
+							<div>
+								<p>À la truffe noire sur sa purée de panais</p>
+								<p>35€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card slide-top6">
+						<div>
+							<h4>Filet de turbot</h4>
+							<div>
+								<p>Aux agrumes</p>
+								<p>44€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card slide-top3">
 				<div>
-					<h4>Oeuf au plat</h4>
-					<div>
-						<p>Assaisonné à la truffe sur lit de caviar</p>
-						<p>20€</p>				
+					<h3>DESSERTS</h3>
+					<div class="underline_div"></div>
+					<div class="menu_card slide-top7">
+						<div>
+							<h4>Paris-Brest</h4>
+							<div>
+								<p>Revisité</p>
+								<p>18€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card slide-top8">
+						<div>
+							<h4>Macaron au chocolat d'exception</h4>
+							<div>
+								<p>Et glace à la vanille de Madagascar</p>
+								<p>22€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
+					</div>
+					<div class="menu_card slide-top9">
+						<div>
+							<h4>Mousse au chocolat </h4>
+							<div>
+								<p>Au piment d'Espelette et à la truffe noire</p>
+								<p>23€</p>				
+							</div>
+						</div>
+						<div><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<h3>PLATS</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card slide-top4">
-				<div>
-					<h4>Filet de boeuf aux herbes</h4>
-					<div>
-						<p>Accompagné de sa ribambelle de légumes</p>
-						<p>40€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card slide-top5">
-				<div>
-					<h4>Parmentier de queue de boeuf</h4>
-					<div>
-						<p>À la truffe noire sur sa purée de panais</p>
-						<p>35€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card slide-top6">
-				<div>
-					<h4>Filet de turbot</h4>
-					<div>
-						<p>Aux agrumes</p>
-						<p>44€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<h3>DESSERTS</h3>
-			<div class="underline_div"></div>
-			<div class="menu_card slide-top7">
-				<div>
-					<h4>Paris-Brest</h4>
-					<div>
-						<p>Revisité</p>
-						<p>18€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card slide-top8">
-				<div>
-					<h4>Macaron au chocolat d'exception</h4>
-					<div>
-						<p>Et glace à la vanille de Madagascar</p>
-						<p>22€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
-			</div>
-			<div class="menu_card slide-top9">
-				<div>
-					<h4>Mousse au chocolat </h4>
-					<div>
-						<p>Au piment d'Espelette et à la truffe noire</p>
-						<p>23€</p>				
-					</div>
-				</div>
-				<div><i class="fas fa-check-circle"></i></div>
 			</div>
 			<div class="div_btn_menu">
 				<button class="btn-title btn-menu">Commander</button>
@@ -126,10 +137,12 @@
 		</main>
 		<footer class="footer_menu">
 			<img src="images/logo/ohmyfood@2x_white.svg" alt="logo OhMyFood"> </br>
-			<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-			<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-			<p>Mentions legales</p>
-			<p>Contact</p>
+			<div>
+				<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+				<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+				<p>Mentions legales</p>
+				<p>Contact</p>
+			</div>
 		</footer>
 	</body>
 </html>
