--- a/homepage.html
+++ b/homepage.html
@@ -40,9 +40,9 @@
 				<h2>Restaurants</h2>
 				<div class="desktop_restaurant_div">
 					<a href="tast_menu_page.html">
-						<div class="homepage_restaurant_card">
+						<div class="homepage_restaurant_card new_restaurant_card">
 							<img class="hompage_img_restaurant" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant Ménilmontan">
-							<div class="homepage_restaurant_subtitle">
+							<div class="homepage_restaurant_subtitle no_padding_bottom">
 								<div>
 									<h4>La palette du goût</h4>
 									<p>Ménilmontan</p>
@@ -52,12 +52,15 @@
 									<i class="fas fa-heart purple"></i>
 								</div>
 							</div>
+							<div class="new_restaurant">
+								<p>Nouveau</p>
+							</div>
 						</div>
 					</a>
 					<a href="enchanter_menu_page.html">
-						<div class="homepage_restaurant_card">
+						<div class="homepage_restaurant_card new_restaurant_card">
 							<img class="hompage_img_restaurant" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant Charonne">
-							<div class="homepage_restaurant_subtitle">
+							<div class="homepage_restaurant_subtitle no_padding_bottom">
 								<div>
 									<h4>La note enchantée</h4>
 									<p>Charonne</p>
@@ -66,6 +69,9 @@
 									<i class="far fa-heart border"></i>
 									<i class="fas fa-heart purple"></i>
 								</div>
+							</div>
+							<div class="new_restaurant">
+								<p>Nouveau</p>
 							</div>
 						</div>
 					</a>
