--- a/homepage.html
+++ b/homepage.html
@@ -117,5 +117,8 @@
 				<p>Contact</p>
 			</div>
 		</footer>
+		<div class="loader_div">
+			<img src="images/Pulse-1s-200px.gif" alt="loader" id="loader" >
+		</div>
 	</body>
 </html>
