--- a/homepage.html
+++ b/homepage.html
@@ -114,11 +114,13 @@
 				<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
 				<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
 				<p>Mentions legales</p>
-				<p>Contact</p>
+				<a href="mailto:ohmyfoog@gmail.com" class="mailto">
+					<p>Contact</p>
+				</a>
 			</div>
 		</footer>
-		<div class="loader_div">
+<!-- 		<div class="loader_div">
 			<img src="images/Pulse-1s-200px.gif" alt="loader" id="loader" >
-		</div>
+		</div> -->
 	</body>
 </html>
