--- a/enchanter_menu_page.html
+++ b/enchanter_menu_page.html
@@ -31,7 +31,7 @@
 				<div>
 					<h3>ENTRÉES</h3>
 					<div class="underline_div"></div>
-					<div class="menu_card">
+					<div class="menu_card slide-top1">
 						<div>
 							<h4>Ravioles de foie gras </h4>
 							<div>
@@ -41,7 +41,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top2">
 						<div>
 							<h4>Caviar osciètre</h4>
 							<div>
@@ -51,7 +51,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top3">
 						<div>
 							<h4>Homard et espuma de potiron</h4>
 							<div>
@@ -61,7 +61,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top4">
 						<div>
 							<h4>Foie gras de canard cuit entier</h4>
 							<div>
@@ -75,7 +75,7 @@
 				<div>
 					<h3>PLATS</h3>
 					<div class="underline_div"></div>
-					<div class="menu_card">
+					<div class="menu_card slide-top5">
 						<div>
 							<h4>Noix de coquilles Saint-Jacques</h4>
 							<div>
@@ -85,7 +85,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top6">
 						<div>
 							<h4>Langoustine poêlée</h4>
 							<div>
@@ -95,7 +95,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top7">
 						<div>
 							<h4>Mijoté de queue de boeuf</h4>
 							<div>
@@ -109,7 +109,7 @@
 				<div>
 					<h3>DESSERTS</h3>
 					<div class="underline_div"></div>
-					<div class="menu_card">
+					<div class="menu_card slide-top8">
 						<div>
 							<h4>Macaron noisette et chocolat</h4>
 							<div>
@@ -119,7 +119,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top9">
 						<div>
 							<h4>Baba au rhum revisité</h4>
 							<div>
@@ -129,7 +129,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top10">
 						<div>
 							<h4>Tarte au citron meringuée</h4>
 							<div>
