--- a/delight_menu_page.html
+++ b/delight_menu_page.html
@@ -31,7 +31,7 @@
 				<div>
 					<h3>ENTRÉES</h3>
 					<div class="underline_div"></div>
-					<div class="menu_card">
+					<div class="menu_card slide-top1">
 						<div>
 							<h4>Tartare de thon</h4>
 							<div>
@@ -41,7 +41,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>			
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top2">
 						<div>
 							<h4>Bouchée de homard croustillant</h4>
 							<div>
@@ -51,7 +51,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top3">
 						<div>
 							<h4>Velouté de cèpes </h4>
 							<div>
@@ -65,7 +65,7 @@
 				<div>
 					<h3>PLATS</h3>
 					<div class="underline_div"></div>
-					<div class="menu_card">
+					<div class="menu_card slide-top4">
 						<div>
 							<h4>Poulet rôti aux herbes de Provence</h4>
 							<div>
@@ -75,7 +75,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top5">
 						<div>
 							<h4>Langouste rôtie</h4>
 							<div>
@@ -85,7 +85,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top6">
 						<div>
 							<h4>Côte de boeuf Angus </h4>
 							<div>
@@ -99,7 +99,7 @@
 				<div>
 					<h3>DESSERTS</h3>
 					<div class="underline_div"></div>
-					<div class="menu_card">
+					<div class="menu_card slide-top7">
 						<div>
 							<h4>Farandole de desserts</h4>
 							<div>
@@ -109,7 +109,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top8">
 						<div>
 							<h4>Crème brulée</h4>
 							<div>
@@ -119,7 +119,7 @@
 						</div>
 						<div><i class="fas fa-check-circle"></i></div>
 					</div>
-					<div class="menu_card">
+					<div class="menu_card slide-top9">
 						<div>
 							<h4>Tiramisu</h4>
 							<div>
