--- a/enchanter_menu_page.html
+++ b/enchanter_menu_page.html
@@ -6,7 +6,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&family=Shrikhand&display=swap" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/2a49ec91c3.js" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/c5a836a7ef.js" crossorigin="anonymous"></script>
 		<title>À la Française</title>
 	</head>
 	<body>
@@ -151,7 +151,9 @@
 				<p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
 				<p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
 				<p>Mentions legales</p>
-				<p>Contact</p>
+				<a href="mailto:ohmyfoog@gmail.com" class="mailto">
+					<p>Contact</p>
+				</a>
 			</div>
 		</footer>
 	</body>
