--- a/enchanter_menu_page.html
+++ b/enchanter_menu_page.html
@@ -12,7 +12,7 @@
 	<body>
 		<nav>
 			<div id="menu_logo_title">
-				<a href="homepage.html">
+				<a href="index.html">
 					<i class="fas fa-arrow-left"></i>
 				</a>
 				<img src="images/logo/ohmyfood@2x.svg" alt="logo OhMyFood">
