--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&family=Shrikhand&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/c5a836a7ef.js" crossorigin="anonymous"></script>
-		<title>OhMyFood</title>
+		<title>O</title>
 	</head>
 	<body>
 		<header>
